2002-07-12  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* dasrt: New subdirectory.
	* Makefile.in (CRUFT_DIRS): Add it to the list.

2002-07-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* odessa: New subdirectory.
	* Makefile.in (CRUFT_DIRS): Add it to the list.

2002-06-27  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* slatec-err/xermsg.f (XERMSG): If MAXMES .LT. 0, messages may be
	printed an unlimited number of times.
	* slatec-err/j4save.f (J4SAVE) Default for MAXMES is now -1.

	* misc/f77-fcn.c (xstopx): Pass args in proper order.

2002-05-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ordered-qz/dsubsp.f (DSUBSP): Delete decl for unused variable J.

	* misc/f77-fcn.c (xstopx): Return type is void, not volatile void.
	* misc/f77-fcn.h (xstopx): Provide decl.  Add special gcc noreturn
	attribute here.

2002-05-16  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* misc/f77-fcn.h: Define F77_FCN for backward compatibility.

2002-04-27  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* slatec-err/ixsav.f, slatec-err/xerrwd.f: New files.

	* daspk: New directory.
	* Makefile.in (CRUFT_DIRS): Add it to the list

2002-04-03  Steven G. Johnson <stevenj@alum.mit.edu>

	* misc/machar.c: Use F77_FUNC instead of checking
	F77_APPEND_UNDERSCORE.
	* misc/f77-fcn.h: Don't define F77_FCN.
	(xSTRINGIZE, STRINGIZE): New macros.
	(F77_XFCN_ERROR): Simplify by using STRINGIZE and F77_FUNC.
	(F77_XFCN): Use F77_FUNC instead of F77_FCN.
	* misc/f77-fcn.c: Use F77_FUNC instead of F77_FCN.

2001-11-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (DISTSUBDIRS): Add fftpack.

2001-08-13  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lapack/dlasq3.f: Update from netlib.
	* lapack/dlasq5.f: Ditto.

2001-05-02  Mumit Khan  <khan@nanotech.wisc.edu>

	* Makefile.in (CRUFT_DIRS): Substitute @FFT_DIR@. 

2001-04-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (install): Don't use mk-libdir-link.

2001-04-19  John W. Eaton  <jwe@bevo.che.wisc.edu>
