@@ -1,3 +1,7 @@
+2002-07-25  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* slatec-fn/xgmainc.f: New file.
+
 2002-07-12  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* dasrt: New subdirectory.
